# digging_out

./: CMakeLists.txt  dependencies.sh
source/include/: pch.hpp
source/include/core/: camera.hpp  color.hpp  drawable.hpp  font.hpp  glyph.hpp  graphics.hpp  renderTexture.hpp  shader.hpp  sprite.hpp  text.hpp  texture.hpp
source/include/game/: game.hpp  level.hpp  player.hpp  utils.hpp
source/src/: main.cpp
source/src/core/: camera.cpp  drawable.cpp  font.cpp  graphics.cpp  renderTexture.cpp  shader.cpp  sprite.cpp  text.cpp  texture.cpp
source/src/game/: game.cpp  level.cpp  player.cpp  utils.cpp
